# qt5compat

./: .cmake.conf  .gitignore  .prev_CMakeLists.txt  CMakeLists.txt  conanfile.py  configure.json  dependencies.yaml
cmake/: FindWrapIconv.cmake  Qt5CompatSetup.cmake
coin/: module_config.yaml
examples/: CMakeLists.txt
examples/core5/: CMakeLists.txt
examples/core5/widgets/: CMakeLists.txt
src/: CMakeLists.txt  src.pro
src/core5/: .prev_configure.cmake  CMakeLists.txt  configure.cmake  configure.json  core5.pro  qcore5global.h  qiterator.qdoc  qlinkedlist.cpp  qlinkedlist.h
src/core5/codecs/: codecs.pri  cp949codetbl_p.h  qbig5codec.cpp  qbig5codec_p.h  qeucjpcodec.cpp  qeucjpcodec_p.h  qeuckrcodec.cpp  qeuckrcodec_p.h  qgb18030codec.cpp  qgb18030codec_p.h  qiconvcodec.cpp  qiconvcodec_p.h  qicucodec.cpp  qicucodec_p.h  qisciicodec.cpp  qisciicodec_p.h  qjiscodec.cpp  qjiscodec_p.h  qjpunicode.cpp  qjpunicode_p.h  qlatincodec.cpp  qlatincodec_p.h  qsimplecodec.cpp  qsimplecodec_p.h  qsjiscodec.cpp  qsjiscodec_p.h  qt_attribution.json  qtcore5-codecs.qdoc  qtextcodec.cpp  qtextcodec.h  qtextcodec_p.h  qtsciicodec.cpp  qtsciicodec_p.h  qutfcodec.cpp  qutfcodec_p.h  qwindowscodec.cpp  qwindowscodec_p.h
src/core5/doc/: qtcore5.qdocconf  qtcore5compat.qdocconf
src/core5/sax/: qxml.cpp  qxml.h  qxml_p.h
src/core5/text/: qregexp.cpp  (+4 more)
src/imports/: imports.pro
tests/: tests.pro
tests/auto/: .prev_CMakeLists.txt  CMakeLists.txt  auto.pro
tests/auto/core5/sax/qxmlsimplereader/parser/: CMakeLists.txt  parser.cpp  parser.h
tests/benchmarks/: CMakeLists.txt
(+209 files in other folders)
